# LocalMovieDatabase

./: README.md
Qt_project/: CMakeLists.txt  StartApp.cpp  StartApp.h  all_movies.txt  main.cpp  watch_list.csv  watch_list.html
Qt_project/Domain/: Movie.cpp  Movie.h
Qt_project/Exceptions/: RepoException.cpp  RepoException.h  ValidatorsException.cpp  ValidatorsException.h
Qt_project/Repo/: Repo.h  UserRepo.h
Qt_project/Repo/FileRepo/: CSVRepo.h  FileRepo.h  HTMLRepo.h
Qt_project/Service/: Admin.h  User.h
Qt_project/Validators/: Validators.cpp  Validators.h
Qt_project/View/: AdminGUI.h  GUI.h  UserGUI.h
